fix margin post wrapping fix ... update copy

--- a/packages/nouns-webapp/src/components/NounProfileVoteRow/NounProfileVoteRow.module.css
+++ b/packages/nouns-webapp/src/components/NounProfileVoteRow/NounProfileVoteRow.module.css
@@ -4,6 +4,7 @@
 
 .voteInfoContainer {
   display: inline-block;
+  margin-top: 4px;
 }
 
 .voteProposalStatus {
